# chainpass

./: .gitignore  Cargo.toml  README.md
blocks_python/: bloquinhos.py  main.py  requirements.txt
blocks_python/.blocks/: pyvenv.cfg
code/blocks_python/: blockbuilder.py  main.py  test.py
code/blocks_python/.blockbuilder/: pyvenv.cfg
code/blocks_python/tx/: serialization.py  transaction_validation.py  transactions.py  tx_knapsack.py
src/: lib.rs  main.rs
src/libpass/: mod.rs  object.rs  user.rs
