[package]
name = "chainpass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chainpass"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
anyhow = "1.0.90"
bdk = "0.29.0"
bitcoin = "0.32.3"
clap = { version = "4.5.20", features = ["derive"] }
generic-array = "1.1.0"
rand = "0.8.5"
